--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
-
+hugo
+**/public*
+/.idea
+hugo.exe
+hugo 
+_site/
+*.test
+*.prof
+nohup.out
+cover.out
+*.swp
+*.swo
+.DS_Store
+*~
+**/.idea/ 
+**/*.iml
+**/.DS_Store
+.idea/
+*.iml
+*.iws
