--- a/circle.yml
+++ b/circle.yml
@@ -15,11 +15,11 @@ checkout:
 
 dependencies:
   pre:
-    - bash ./xap-docs/install-hugo.sh
+    - cd ./xap-docs && bash ./install-hugo.sh
   override:
-    - cd ./xap-docs $$ bundle install: 
+    - cd ./xap-docs && bundle install: 
         timeout: 3600 # fail if command has no output for 60 minutes
-    - bash ./xap-docs/build-site.sh
+    - cd ./xap-docs && bash ./build-site.sh
   cache_directories:
     - /home/ubuntu/.rvm/gems/ruby-2.1.2
     - ./xap-docs/hugo 
@@ -33,5 +33,4 @@ deployment:
   production:
     branch: master
     commands:
-      - cd ./xap-docs
-      - s3_website push
+      - cd ./xap-docs && s3_website push
